[metadata]
name = umledit
version = 0.0.1
author = Song Yang
author_email = songyang1218@gmail.com
description = A Python package for editing UML diagrams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XsongyangX/umledit
project_urls =
    Bug Tracker = https://github.com/XsongyangX/umledit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src